@@ -3,6 +3,7 @@ Revision history for WWW-Scraper-ISBN-WHSmith_Driver
 
         - fixed license fields in META.json to be lists.
         - ping fix for Cygwin (thanks to Alexandr Ciornii).
+        - updated search page logic.
 
 0.06    2014-08-11
         - test data update.
